Update avatar toolbar button when account is removed

Update the icon of the avatar toolbar button when
an account is signed out.
This happens for instance when the user selects cancel
on the sync-confirmation dialog.

Bug: 870656
Change-Id: Id557500c02ef2ac10d704cde75a9afe9db5e7655
Reviewed-on: https://chromium-review.googlesource.com/1185195
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Thomas Tangl <tangltom@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585148}
Former-commit-id: c2f5b2df7f21c1bc0d41ce0e0d929c2ef193e002